testdata/bad/timeToMillisWithNoZone.ion
// Missing timezone
1969-02-23T00:00:00.000
